--- a/index.html
+++ b/index.html
@@ -939,6 +939,54 @@
       white-space: nowrap;
     }
 
+    .popup-likelihood-select {
+      min-width: 132px;
+      font-size: 12px;
+      padding: 5px 7px;
+      border-radius: 7px;
+      border: 1px solid #cfdbf4;
+      color: #1f355b;
+      background: #fff;
+    }
+
+    .likelihood-summary {
+      border: 1px solid #dfe8f8;
+      border-radius: 8px;
+      background: #f8fbff;
+      padding: 9px 10px;
+      margin-top: 8px;
+      display: grid;
+      gap: 6px;
+    }
+
+    .likelihood-summary-title {
+      font-size: 11px;
+      font-weight: 700;
+      color: #304a74;
+      text-transform: uppercase;
+      letter-spacing: 0.2px;
+    }
+
+    .likelihood-summary-row {
+      display: flex;
+      justify-content: space-between;
+      gap: 8px;
+      font-size: 12px;
+      color: #223758;
+    }
+
+    .likelihood-summary-row strong {
+      color: #0e2f63;
+      font-variant-numeric: tabular-nums;
+    }
+
+    .likelihood-summary-pending {
+      border-top: 1px solid #dce7fb;
+      padding-top: 6px;
+      font-size: 11px;
+      color: #4a5f84;
+    }
+
     .footnote {
       padding: 10px 18px 14px;
       font-size: 12px;
@@ -1492,6 +1540,7 @@
               <th>Intro Month</th>
               <th>Age (days)</th>
               <th>Reason</th>
+              <th>Likelihood</th>
             </tr>
           </thead>
           <tbody id="kpi-popup-body"></tbody>
@@ -1550,6 +1599,14 @@
       '5. Contracting',
       '6. Commercial Proposal'
     ]);
+    const DEAL_LIKELIHOOD_KEY = 'sales_dashboard_deal_likelihood_v1';
+    const LIKELIHOOD_THIS_Q = 'this_q';
+    const LIKELIHOOD_NEXT_Q = 'next_q';
+    const LIKELIHOOD_HELP = 'help_needed';
+    let likelihoodState = {};
+    let activeQuarterLabels = { current: 'Current Quarter', next: 'Next Quarter' };
+    let scorecardStateBySeller = {};
+    let scorecardSummaryEls = {};
     const AUTH_USERS_KEY = 'sales_dashboard_users_v1';
     const AUTH_SESSION_KEY = 'sales_dashboard_session_v1';
     let currentUser = null;
@@ -1565,6 +1622,114 @@
       const d = new Date(ts);
       if (Number.isNaN(d.getTime())) return '-';
       return d.toLocaleString();
+    }
+
+    function loadLikelihoodState() {
+      try {
+        const parsed = JSON.parse(localStorage.getItem(DEAL_LIKELIHOOD_KEY) || '{}');
+        if (parsed && typeof parsed === 'object') return parsed;
+      } catch (_) {}
+      return {};
+    }
+
+    function saveLikelihoodState() {
+      localStorage.setItem(DEAL_LIKELIHOOD_KEY, JSON.stringify(likelihoodState));
+    }
+
+    function stageNumber(stage) {
+      const m = String(stage || '').match(/^(\d+)\./);
+      return m ? Number(m[1]) : null;
+    }
+
+    function parseDateOrNow(dateLike) {
+      if (dateLike) {
+        const d = new Date(dateLike);
+        if (!Number.isNaN(d.getTime())) return d;
+      }
+      return new Date();
+    }
+
+    function fiscalQuarterLabel(dateLike) {
+      const d = parseDateOrNow(dateLike);
+      const month = d.getMonth() + 1;
+      const fiscalMonth = ((month - 4 + 12) % 12) + 1;
+      const quarter = Math.floor((fiscalMonth - 1) / 3) + 1;
+      const fiscalYear = month >= 4 ? d.getFullYear() + 1 : d.getFullYear();
+      return { quarter, fiscalYear };
+    }
+
+    function nextFiscalQuarter({ quarter, fiscalYear }) {
+      if (quarter < 4) return { quarter: quarter + 1, fiscalYear };
+      return { quarter: 1, fiscalYear: fiscalYear + 1 };
+    }
+
+    function fiscalQuarterText(qInfo) {
+      const yy = String(qInfo.fiscalYear).slice(-2);
+      return `Q${qInfo.quarter}'${yy}`;
+    }
+
+    function buildQuarterLabels(referenceDate) {
+      const currentInfo = fiscalQuarterLabel(referenceDate);
+      const nextInfo = nextFiscalQuarter(currentInfo);
+      return {
+        current: fiscalQuarterText(currentInfo),
+        next: fiscalQuarterText(nextInfo),
+      };
+    }
+
+    function likelihoodRecordKey(rec) {
+      return [
+        normalizeUsername(rec.seller || ''),
+        String(rec.deal || '').trim().toLowerCase(),
+        String(rec.stage || '').trim().toLowerCase(),
+        String(rec.created_month || '').trim().toLowerCase()
+      ].join('||');
+    }
+
+    function buildScorecardSellerUniverse(metric) {
+      const details = metric.kpi_details || {};
+      const base = [...(details.stage_1_6 || []), ...(details.stage_7_8 || [])];
+      const seen = new Set();
+      const out = [];
+      base.forEach((rec) => {
+        const key = likelihoodRecordKey(rec);
+        if (seen.has(key)) return;
+        seen.add(key);
+        out.push(rec);
+      });
+      return out;
+    }
+
+    function summarizeLikelihoodForSeller(metric) {
+      const universe = buildScorecardSellerUniverse(metric);
+      const summary = {
+        thisQuarter: 0,
+        nextQuarter: 0,
+        helpNeeded: 0,
+        pendingStage3Plus: 0,
+      };
+      universe.forEach((rec) => {
+        const key = likelihoodRecordKey(rec);
+        const selected = likelihoodState[key] || '';
+        if (selected === LIKELIHOOD_THIS_Q) summary.thisQuarter += 1;
+        else if (selected === LIKELIHOOD_NEXT_Q) summary.nextQuarter += 1;
+        else if (selected === LIKELIHOOD_HELP) summary.helpNeeded += 1;
+
+        const stageNum = stageNumber(rec.stage);
+        if (stageNum != null && stageNum >= 3 && !selected) summary.pendingStage3Plus += 1;
+      });
+      return summary;
+    }
+
+    function updateLikelihoodSummaryForSeller(seller) {
+      const metric = scorecardStateBySeller[seller];
+      const refs = scorecardSummaryEls[seller];
+      if (!metric || !refs) return;
+      const summary = summarizeLikelihoodForSeller(metric);
+      refs.thisQuarter.textContent = money.format(summary.thisQuarter);
+      refs.nextQuarter.textContent = money.format(summary.nextQuarter);
+      refs.helpNeeded.textContent = money.format(summary.helpNeeded);
+      refs.pending.textContent = money.format(summary.pendingStage3Plus);
     }
 
     function loadAuthStore() {
@@ -2159,6 +2324,7 @@
         tr.appendChild(makeCell('td', '-'));
         tr.appendChild(makeCell('td', '-'));
         tr.appendChild(makeCell('td', '-'));
+        tr.appendChild(makeCell('td', '-'));
         body.appendChild(tr);
       } else {
         const rows = [...records].sort((a, b) => {
@@ -2174,6 +2340,31 @@
           tr.appendChild(makeCell('td', r.created_month || '-'));
           tr.appendChild(makeCell('td', r.age_days == null ? '-' : money.format(r.age_days)));
           tr.appendChild(makeCell('td', r.reason || '-'));
+          const selTd = document.createElement('td');
+          const select = document.createElement('select');
+          select.className = 'popup-likelihood-select';
+          const options = [
+            ['', '-- Select --'],
+            [LIKELIHOOD_THIS_Q, activeQuarterLabels.current],
+            [LIKELIHOOD_NEXT_Q, activeQuarterLabels.next],
+            [LIKELIHOOD_HELP, 'Help Needed / Stuck'],
+          ];
+          options.forEach(([value, label]) => {
+            const opt = document.createElement('option');
+            opt.value = value;
+            opt.textContent = label;
+            select.appendChild(opt);
+          });
+          const key = likelihoodRecordKey(r);
+          select.value = likelihoodState[key] || '';
+          select.addEventListener('change', () => {
+            if (select.value) likelihoodState[key] = select.value;
+            else delete likelihoodState[key];
+            saveLikelihoodState();
+            if (r.seller) updateLikelihoodSummaryForSeller(r.seller);
+          });
+          selTd.appendChild(select);
+          tr.appendChild(selTd);
           body.appendChild(tr);
         });
       }
@@ -2186,9 +2377,13 @@
       const sellers = data.sellers.filter((s) => s !== 'All (unique deals)');
       const wrap = document.getElementById('score-wrap');
       wrap.innerHTML = '';
+      activeQuarterLabels = buildQuarterLabels(score.as_of_date);
+      scorecardStateBySeller = {};
+      scorecardSummaryEls = {};
 
       sellers.forEach((seller) => {
         const m = (score.sellers || {})[seller] || {};
+        scorecardStateBySeller[seller] = m;
         const card = document.createElement('div');
         card.className = 'score-card';
 
@@ -2272,6 +2467,48 @@
         mid.appendChild(shape);
         card.appendChild(mid);
 
+        const summary = document.createElement('div');
+        summary.className = 'likelihood-summary';
+        const summaryTitle = document.createElement('div');
+        summaryTitle.className = 'likelihood-summary-title';
+        summaryTitle.textContent = 'Seller-Tagged Close Likelihood';
+        summary.appendChild(summaryTitle);
+
+        const row1 = document.createElement('div');
+        row1.className = 'likelihood-summary-row';
+        row1.appendChild(makeCell('span', `1. Closures in ${activeQuarterLabels.current}`));
+        const row1Val = makeCell('strong', '0');
+        row1.appendChild(row1Val);
+        summary.appendChild(row1);
+
+        const row2 = document.createElement('div');
+        row2.className = 'likelihood-summary-row';
+        row2.appendChild(makeCell('span', `2. Closures in ${activeQuarterLabels.next}`));
+        const row2Val = makeCell('strong', '0');
+        row2.appendChild(row2Val);
+        summary.appendChild(row2);
+
+        const row3 = document.createElement('div');
+        row3.className = 'likelihood-summary-row';
+        row3.appendChild(makeCell('span', '3. Help Needed / Stuck'));
+        const row3Val = makeCell('strong', '0');
+        row3.appendChild(row3Val);
+        summary.appendChild(row3);
+
+        const pending = document.createElement('div');
+        pending.className = 'likelihood-summary-pending';
+        pending.appendChild(document.createTextNode('Not updated (stage 3+): '));
+        const pendingVal = makeCell('strong', '0');
+        pending.appendChild(pendingVal);
+        summary.appendChild(pending);
+        card.appendChild(summary);
+        scorecardSummaryEls[seller] = {
+          thisQuarter: row1Val,
+          nextQuarter: row2Val,
+          helpNeeded: row3Val,
+          pending: pendingVal,
+        };
+
         const table = document.createElement('table');
         table.className = 'score-table';
         const thead = document.createElement('thead');
@@ -2302,6 +2539,7 @@
         card.appendChild(table);
 
         wrap.appendChild(card);
+        updateLikelihoodSummaryForSeller(seller);
       });
       const rows = sellers.map((seller) => ({ seller, m: (score.sellers || {})[seller] || {} }));
       const topVol = [...rows].sort((a, b) => (b.m.stage_1_6_count || 0) - (a.m.stage_1_6_count || 0))[0];
@@ -2763,6 +3001,7 @@
         const selectedFunnelStages = new Set(orderedFunnelStages);
         const funnelMonths = [...(data.months || [])];
         let funnelMinMonth = funnelMonths[0] || null;
+        likelihoodState = loadLikelihoodState();
 
         function updateFromCheckboxes() {
           selectedStages.clear();
